# csce3530_lab5

./: .gitignore  CMakeLists.txt  README.md  copy_test_router.sh  main.c  router.txt
lib/: CMakeLists.txt  common.c  common.h  dijkstra.c  dijkstra.h  graph.c  graph.h
